--- a/src/taptempo_config.h.in
+++ b/src/taptempo_config.h.in
@@ -1,3 +1,18 @@
+//    TapTempo, a command line tap tempo.
+//    Copyright (C) 2017 Francois Mazen
+//
+//    This program is free software: you can redistribute it and/or modify
+//    it under the terms of the GNU General Public License as published by
+//    the Free Software Foundation, either version 3 of the License, or
+//    (at your option) any later version.
+//
+//    This program is distributed in the hope that it will be useful,
+//    but WITHOUT ANY WARRANTY; without even the implied warranty of
+//    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+//    GNU General Public License for more details.
+//
+//    You should have received a copy of the GNU General Public License
+//    along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 // Version
 #define TAPTEMPO_VERSION_MAJOR @TAPTEMPO_VERSION_MAJOR@
