--- a/src/taptempo_config.h.in
+++ b/src/taptempo_config.h.in
@@ -18,13 +18,7 @@
 #define TAPTEMPO_VERSION_MAJOR @TAPTEMPO_VERSION_MAJOR@
 #define TAPTEMPO_VERSION_MINOR @TAPTEMPO_VERSION_MINOR@
 #define TAPTEMPO_VERSION_REVISION @TAPTEMPO_VERSION_REVISION@
-
-// Generate version from macros.
-#define DOT_CONCAT(x, y) x ## . ## y
-#define DOT_CONCAT_EVAL(x, y) DOT_CONCAT(x, y)
-#define STRINGIFY(s) #s
-#define EVAL_AND_STRINGIFY(s) STRINGIFY(s)
-#define TAPTEMPO_VERSION EVAL_AND_STRINGIFY(DOT_CONCAT_EVAL(DOT_CONCAT_EVAL(TAPTEMPO_VERSION_MAJOR, TAPTEMPO_VERSION_MINOR), TAPTEMPO_VERSION_REVISION))
+#define TAPTEMPO_VERSION "@TAPTEMPO_VERSION_MAJOR@.@TAPTEMPO_VERSION_MINOR@.@TAPTEMPO_VERSION_REVISION@"
 
 // Localization
 #define TAPTEMPO_PACKAGE_NAME "@TAPTEMPO_PACKAGE_NAME@"
